[package]
name = "negative-one-list"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
actix-web = "4"
config = "0.13"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
async-std = "1.12"
env_logger = "0.10.0"


[profile.release]
strip = true
lto = true
panic = "abort"
